# web-voyager

./: .gitignore  README.md  dev.md  pyproject.toml  run.ipynb  run_selenium.py  scratchpad.ipynb
skill_library/primitives/: goto.py  scroll.py
skill_library/runs/run1/code/: find_linkedin.py  get_wikipedia_article_summary.py
skill_library/trial1/code/: get_wikipedia_article_summary.py
skill_library/trial1/description/: get_wikipedia_article_summary.txt
testing/: browse.py  run.ipynb
voyager/: config.py  environment.py  helpers.py  voyager.py
voyager/agents/: action.py  critic.py  curriculum.py  skill.py
voyager/environment/: environment.py
voyager/prompts/: action.txt  curriculum.txt  weather_task.txt
